# coderacer-web

./: .gitignore  docker-compose.yaml  nginx.conf  pyproject.toml
api/: Dockerfile  data.yaml  pyproject.toml  requirements.txt  schema.yml
api/apps/: data.yaml  settings.py  urls.py
api/engine/: constants.py  serializers.py  services.py  urls.py  views.py
api/problem/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/problem/migrations/: 0001_initial.py  0002_initial.py  0003_problem_name.py  0004_codeblock_imports_codeblock_runner_code_and_more.py  0005_testcase_display_testcase.py  0006_testcase_output_type_alter_solution_status.py
api/runners/cpp/: Dockerfile
api/runners/java/: Dockerfile
api/runners/python/: Dockerfile
api/runners/typescript/: Dockerfile
api/user/: admin.py  models.py  urls.py  views.py
api/user/migrations/: 0001_initial.py
web/: Dockerfile  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/problems/[id]/: page.tsx
web/components/: code-block.tsx  daily-challenge.tsx  difficulty-badge.tsx  filter-accordion.tsx  header.tsx  icon-button.tsx  loader.tsx  logo.tsx  pagination.tsx  problem-list.tsx  problem-table.tsx  sidebar.tsx  tab-button.tsx
web/components/problem/: code-editor.tsx  editor-toolbar.tsx  header.tsx  problem-description.tsx  test-panel.tsx
web/lib/: constants.ts  models.ts  utils.ts
